nav part reposnive done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
            <li><a class="link-nav gray" href="">About us</a></li>
            <div class="cart-part">
             <i class="fa-solid fa-cart-shopping"></i>
-            <li><a class="link-nav home"href="">Cart ($56)</a></li>
+            <li><a class="link-nav home cart-link" href="">Cart ($56)</a></li>
+
            </div>
         
        </ul>
