banner-part done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-logo-part">
         <img class="logo" src="assets/logo.png" alt="">
-        <div class="logo-section">
+        <div>
        <ul class="link">
            
            <li><a class="link-nav home" href="">Home</a></li>
@@ -26,8 +26,21 @@
        </ul>
         </div>
         </nav>
+        <div class="banner">
+            <div class="banner-text">
+                <h1 class="banner-title">ALWAYS <span class="fresh-part">FRESH<br>FLOWERS</span></h1>
+                <p class="banner-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-flower.png" alt="">
+            </div>
+        </div>
     </header>
-    <main></main>
+    <main>
+        <div class="Plants-Section">
+            <h1 class="plants-title"><span class="plants-latest">Latest </span> Deals</h1>
+        </div>
+    </main>
     <footer>
 
     </footer>
