--- a/index.html
+++ b/index.html
@@ -38,8 +38,92 @@
     </header>
     <main>
         <div class="Plants-Section">
-            <h1 class="plants-title"><span class="plants-latest">Latest </span> Deals</h1>
-        </div>
+            <div class="plants-text">
+                <h1 class="plants-title"><span class="plants-latest">Latest </span> Deals</h1>
+            <p class="gray plants-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="full-cart">
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="cart">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <div class="cart-text">
+                        <div class="lily">
+                            <p class="lily-bl">Lily Blossom</p>
+                            <h4>20 USD</h4>
+                        </div>
+                        <button class="btn-primary">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
     </main>
     <footer>
 
