plants-lover-section done

--- a/index.html
+++ b/index.html
@@ -124,6 +124,22 @@
                     </div>
                 </div>
             </div>
+ <div class="Plants-Lover-Section">
+  <div class="plant-img-wrapper">
+    <img class="plant-lover-img" src="assets/flower-store.png" alt="">
+    <img class="badge" src="assets/trusted-badge.png" alt="">
+  </div>
+  <div class="plant-text">
+    <h3 class="flower-title">Flower & Plants<br> Lover</h3>
+    <ul class="flower-ul">
+      <li class="flower-li">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+      <li class="flower-li">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+      <li class="flower-li">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+    </ul>
+  </div>
+</div>
+
+
     </main>
     <footer>
 
