--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <div class="Plants-Section">
             <div class="plants-text">
-                <h1 class="plants-title"><span class="plants-latest">Latest </span> Deals</h1>
+                <h1 class="plants-title"><span class="plants-latest">Our</span> Plants</h1>
             <p class="gray plants-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div class="full-cart">
@@ -138,7 +138,29 @@
     </ul>
   </div>
 </div>
+<section class="join">
+<div class="join-text">
+    <h1 class="plants-title"><span class="plants-latest">Latest </span> Deals</h1>
+     <p class="gray plants-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>   
+</div>
 
+ <section class="blooms-display-flex">
+        <div class="blooms-left">
+            <div class="bloom ">
+                <h3>60% Off | Bloom Plant</h3>
+                <a href="">Shop Now</a>
+            </div>
+            <div class="ana">
+                <h3>30% Off | Ana Plant</h3>
+                <a href="">Shop Now</a>
+            </div>
+        </div>
+        <div class="zabo">
+            <h3>25% Off | Zoba Plant</h3>
+            <a href="">Shop Now</a>
+        </div>
+    </section>
+    </section>
 
     </main>
     <footer>
