colurfull part done

--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
         </div>
     </section>
     </section>
+    <section class="colourful">
+  <h3>Join the colorful Bunch</h3>
+  <div class="email">
+    <input type="text" placeholder="Write email">
+  <button>Subscribe</button>
+  </div>
+</section>
+
 
     </main>
     <footer>
