responsive done,Assignment done

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div>
        <ul class="link">
            
-           <li><a class="link-nav home" href="">Home</a></li>
-           <li><a class="link-nav gray" href="">Shop</a></li>
-           <li><a class="link-nav gray" href="">About us</a></li>
+           <li><a class="link-nav home hide-mobile" href="">Home</a></li>
+           <li><a class="link-nav gray hide-mobile" href="">Shop</a></li>
+           <li><a class="link-nav gray hide-mobile" href="">About us</a></li>
            <div class="cart-part">
             <i class="fa-solid fa-cart-shopping"></i>
             <li><a class="link-nav home cart-link" href="">Cart ($56)</a></li>
@@ -169,6 +169,7 @@
   </div>
 </section>
 </main>
+<footer>
     <div class="footer container display-flex">
         <div class="footer-logo">
             <img src="assets/logo.png" alt="">
